# vault4r

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.cargo/: config
.docker/volumes/vault/: config.env
.docker/volumes/vault-etcd/config/: vault.hcl
.docker/volumes/vault/policies/: key_value.hcl
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs  sys.rs
proto/: Cargo.toml
proto/src/: error.rs  lib.rs
proto/src/secret/: database.rs  kv.rs  mod.rs
proto/src/sys/: auth.rs  capability.rs  health.rs  init.rs  key.rs  lease.rs  mod.rs  mount.rs  namespace.rs  seal.rs
src/: client.rs  de.rs  error.rs  lib.rs  protocol.rs  secret.rs  types.rs
src/proto/: auth.rs  error.rs  health.rs  init.rs  key.rs  leader.rs  lease.rs  license.rs  mod.rs  mount.rs  namespace.rs  seal.rs  sys.rs  types.rs
