[package]
name = "vault4r"
version = "0.1.0"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.99", features = ["derive"] }
hyper-rustls = "0.17.1"
# reqwest = { version = "0.9.20", features = [ "trust-dns", "rustls-tls" ] }
chrono = "0.4.7"
hyper = "0.12.33"
futures = "0.1.29"
http = "0.1.18"
