[package]
name = "vaultr-client"
version = "0.1.0"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
chrono = "0.4.7"
hyper = { version = "0.13.0-alpha.4", default-features = false, features = ["unstable-stream"] }
http = "0.1.18"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["compat"] }
lazy_static = "1.4.0"
derive_builder = "0.8.0"
vaultr-proto = { path = "../proto" }