[package]
name = "vaultr-proto"
version = "0.1.0"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
chrono = "0.4.7"
http = "0.1.18"
lazy_static = "1.4.0"
derive_builder = "0.8.0"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["compat"] }
parse_duration = "2.0.1"
